--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,7 +134,7 @@
         <br>
         <p id="bpm-state"><em>Place your finger on the sensor</em></p> <!-- bpm status message -->
         <br>
-        
+
       </div>
       <br>
       <div id="bpm-warning" style="display: none; border-radius: 30px;" class="alert alert-danger" role="alert">
@@ -250,7 +250,7 @@
 
   <script>
     //var sock =new WebSocket("ws://localhost:5001");
-    var sock = new WebSocket("ws://192.168.43.173:3000"); //replace this address with the one the node.js server prints out. keep port 3000
+    var sock = new WebSocket("ws://192.168.43.173:3000");
     var display = document.getElementById("display");
     var bpmDiv = document.getElementById("bpm-h1");
     var bpmState = document.getElementById("bpm-state");
